--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.12.0",
     "@supabase/supabase-js": "^2.52.0",
     "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "cookies": "^0.9.1",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
