--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.12.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.52.0",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "cookies": "^0.9.1",
-    "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,7 @@
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-avatar": "^5.0.4",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
