--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "cookies": "^0.9.1",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
