--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^19.0.0",
     "react-avatar": "^5.0.4",
     "react-dom": "^19.0.0",
